[gd_scene load_steps=2 format=3 uid="uid://d3xslbkl1p37d"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_pqh7s"]

[node name="UI" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pqh7s")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "          Play          "

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "          Exit          "

[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="PlayButtonPressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="ExitButtonPressed"]
